--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,16 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+/JavaApplication5/nbproject/private/
+/robocode-prop/nbproject/private/
+/robocode-prop/build/
+
+ 
+**/nbproject/private/
+**/nbproject/Makefile-*.mk
+**/nbproject/Package-*.bash
+build/
+nbbuild/
+dist/
+nbdist/
+.nb-gradle/
